k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-app
  namespace: express-space
spec:
  replicas: 2
  selector:
    matchLabels:
      app: express-app
  template:
    metadata:
      labels:
        app: express-app
    spec:
      containers:
      - name: express-app
        image: happycoder07/backend:latest
        ports:
        - containerPort: 5000
      nodeSelector:
        nodegroup: express-app-node-group
      imagePullSecrets:
      - name: regcred
