k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: express-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-eip-allocations: "eipalloc-07e12983d96f871ee"

spec:
  selector:
    app: express-app
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: LoadBalancer
